--- a/index.html
+++ b/index.html
@@ -94,10 +94,9 @@
 
     <section class="home" id="home">
 
-        <div align="center">
-            <a class="image featured" >
-                <img src="image/logo.png" alt="" />
-            </a>
+        <div align="home center">
+            
+            <img src="image/logo.png" alt="" class="responsive" width="400" height="400" />
         </div>
         <div class="content">
             <h3>fresh and <span>pickles</span> products for your</h3>
