--- a/pickled fruit.html
+++ b/pickled fruit.html
@@ -28,7 +28,7 @@
 
     <!--header-->
     <header class="header">
-        <a href="index.html"><img src="image/logo.png" alt="Logo" height="100px"></a>
+        <a href="index.html"><img src="image/logo.png" alt="Logo" class="logo"></a>
         <nav class="navbar">
             <a href="index.html">home</a>
             <a href="#products">products</a>
