--- a/checkout.html
+++ b/checkout.html
@@ -33,9 +33,62 @@
             <a href="#products">products</a>
             <a href="#categories">categories</a>
         </nav>
+        <div class="icons">
+            <div class="fas fa-bars" id="menu-btn"></div>
+            <div class="fas fa-search" id="search-btn"></div>
+            <div class="fas fa-shopping-cart" id="cart-btn"></div>
+            <div class="fas fa-user" id="login-btn"></div>
+        </div>
 
+        <form action="" class="search-form">
+            <input type="search" id="search-box" placeholder="search here...">
+            <label for="search-box" class="fas fa-search"></label>
+        </form>
 
+        <div class="shopping-cart">
+            <div class="box">
+                <i class="fas fa-trash"></i>
+                <img src="image/cart-img-1.png" alt="">
+                <div class="content">
+                    <h3>ขิงดอง</h3>
+                    <span class="price">100 THB</span>
+                    <span class="quantity">qty : 1</span>
+                </div>
+            </div>
+            <div class="box">
+                <i class="fas fa-trash"></i>
+                <img src="image/cart-img-2.png" alt="">
+                <div class="content">
+                    <h3>แซลมอนดอง</h3>
+                    <span class="price">300 THB</span>
+                    <span class="quantity">qty : 3</span>
+                </div>
+            </div>
+            <div class="box">
+                <i class="fas fa-trash"></i>
+                <img src="image/cart-img-3.png" alt="">
+                <div class="content">
+                    <h3>ส้ม</h3>
+                    <span class="price">100 THB</span>
+                    <span class="quantity">qty : 2</span>
+                </div>
+            </div>
+            <div class="total"> total : 1200 THB</div>
+            <a href="checkout.html" class="btn modal" style="font-size: 1.5vw;">checkout</a>
+        </div>
+
+<!-- features section ends -->
+        <form action="" class="login-form">
+            <h3>login now</h3>
+            <input type="email" placeholder="your email" class="box">
+            <input type="password" placeholder="your password" class="box">
+            <p>forget your password <a href="#">click here</a></p>
+            <p>don't have an account <a href="#">create now</a></p>
+            <input type="submit" value="login now" class="btn" style="font-size: 1.5vw;">
+        </form>
     </header>
+
+    <!-- header section ends -->
     <div class="wrapper">
         <div class="container">
             <form action="">
