--- a/checkout.html
+++ b/checkout.html
@@ -21,6 +21,9 @@
     <!--css-->
     <link rel="stylesheet" href="asset/mystyle.css" />
     <link rel="stylesheet" href="asset/checkout.css">
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <!--custom js file link-->
+    <script src="asset/script.js"></script>
 </head>
 
 <body>
